--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 
 <head>
-    <title>ここに難易度表の名前</title>
+    <title>飲酒/泥酔難易度表</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
     <header class="mb-3">
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1">ここに難易度表の名前</span>
+                <span class="navbar-brand mb-0 h1">地力最弱発狂皆伝のアップ・スコア練習・密度耐性上げ用データです。俺しか使わんやろ</span>
             </div>
         </nav>
     </header>
