--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="mb-3">
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1">地力最弱発狂皆伝のアップ・スコア練習・密度耐性上げ用データです。俺しか使わんやろ</span>
+                <span class="navbar-brand mb-0 h1">飲酒/泥酔難易度表</span>
             </div>
         </nav>
     </header>
@@ -27,10 +27,11 @@
     <div class="container">
 
         <div class="alert alert-success mb-3" role="alert">
-            <p>ここに難易度表の説明文。次期難易度表フォーマット対応。</p>
+            <p>地力最弱発狂皆伝のアップ・スコア練習・密度耐性上げ用データです。俺しか使わんやろ。</p>
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
-            <p class="mb-0">説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文</p>
+            <p class="mb-0">s11-s20が★難度、sdがstella難易度におおよそ対応します。</p>
+            <p class="mb-0">但し練習強度の加味、Total値の無視の上での難易度調整を今後すると思います。多分。</p>
         </div>
 
 
