--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <hr>
             <p class="mb-0">s11-s20が★難度、sdがstella難易度におおよそ対応します。</p>
             <p class="mb-0">但し練習強度の加味、Total値の無視の上での難易度調整を今後すると思います。多分。</p>
+            <p class="mb-0">tasks：sl10以上の譜面追加進める、調整入れる、未所持譜面反映進める</p>
         </div>
 
 
