--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>地力最弱発狂皆伝のアップ・スコア練習・密度耐性上げ用データです。俺しか使わんやろ。</p>
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
-            <p class="mb-0">s11-s20が★難度、sdがstella難易度におおよそ対応します。</p>
+            <p class="mb-0">s-が★難度、sd-がstella難易度におおよそ対応します。</p>
             <p class="mb-0">但し練習強度の加味、Total値の無視の上での難易度調整を今後すると思います。多分。</p>
             <p class="mb-0">tasks：sl10以上の譜面追加進める、調整入れる、未所持譜面反映進める</p>
         </div>
